install primeflex + color style

--- a/apps/app-portfolio/src/styles.scss
+++ b/apps/app-portfolio/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+/* Color Theme Swatches in Hex */
+$Bleu-theme-portfolio-1: #2346A8;
+$Bleu-theme-portfolio-2: #3963DB;
+$Bleu-theme-portfolio-3: #A1E1F4;
+$Bleu-theme-portfolio-4: #EBB96B;
+$Bleu-theme-portfolio-5: #F0D673;
+
+body{
+  background-color: #3963DB;
+}
